# dep-inspect-rs

./: .prettierrc.json  Cargo.toml  package-lock.json  package.json  readme.md
src/: main.rs  styles.rs  types.rs
src/controllers/: file_package.rs  file_remote.rs  mod.rs  name_packages.rs
src/service/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
