[package]
name = "pack-analyzer-npmjs"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
clap = { version = "4", features = ["derive"] }
